test/sema/typeck/struct/unnamed-field-assignment-unknown.dora
struct Foo(Int, Bool)
fn f(x: Foo, v: Bool) {
    x.2 = v;
}
